# TopologyMap

./: .gitignore  CMakeLists.txt  README.md  build-wrapper-dump.json  compile_commands.json  sonar-project.properties
build_wrapper_output_directory/: build-wrapper-dump.json
includes/App/: CompareManager.h  CompareWindow.h  SceneZoom.h  SearchManager.h  SearchWindow.h  TopologyMap.h  TopologyMapTab.h  TopologyMapView.h  TopologyMapWindow.h
includes/DataHandler/: ConnectorDocumentSegment.h  DocumentParser.h  DocumentSegment.h  DocumentStrings.h  JointDocumentSegment.h  MotionBodyDocumentSegment.h  SceneFromXML.h  SceneToXML.h  Version.h  Version12.h  Version13.h
includes/DataModel/: Connector.h  Element.h  Joint.h  Link.h  LinkAtachment.h  Mechanism.h  MotionBody.h  MotionBodyComponent.h  Point3D.h
includes/Elements/: Connector.h  DocumentParser.h  Element.h  Graph.h  Graph2.h  Joint.h  Link.h  Mechanism.h  (+3 more)
src/: CMakeLists.txt
src/App/: CMakeLists.txt  CompareManager.cpp  CompareWindow.cpp  SceneZoom.cpp  SearchManager.cpp  SearchWindow.cpp  TopologyMap.cpp  TopologyMapTab.cpp  TopologyMapView.cpp  TopologyMapWindow.cpp
src/DataHandler/: CMakeLists.txt  ConnectorDocumentSegment.cpp  DocumentParser.cpp  DocumentSegment.cpp  JointDocumentSegment.cpp  MotionBodyDocumentSegment.cpp  SceneFromXML.cpp  SceneToXML.cpp  Version.cpp  Version12.cpp  Version13.cpp
src/DataModel/: CMakeLists.txt  Connector.cpp  Element.cpp  Joint.cpp  Link.cpp  LinkAtachment.cpp  Mechanism.cpp  MotionBody.cpp  MotionBodyComponent.cpp  Point3D.cpp
src/Elements/: CMakeLists.txt  Connector.cpp  DocumentParser.cpp  Element.cpp  Graph.cpp  Graph2.cpp  Joint.cpp  Link.cpp  LinkAtachment.cpp  Mechanism.cpp  MotionBody.cpp  Point3D.cpp
src/Graph/: CMakeLists.txt  Test.cpp
src/GraphicModel/: Bounder.cpp  CMakeLists.txt  Connector.cpp  Element.cpp  Joint.cpp  Link.cpp  Mechanism.cpp  MotionBody.cpp  OverlappingLinkFinder.cpp
src/GraphicView/: CMakeLists.txt  Connector.cpp  ConnectorPainter.cpp  ConnectorPainterPathCreator.cpp  Element.cpp  ElementRightClickMenu.cpp  IPainterPathCreator.cpp  Joint.cpp  JointPainter.cpp  JointPainterPathCreator.cpp  Link.cpp  MotionBody.cpp  MotionBodyPainter.cpp  TopologyMapScene.cpp  Turtle.cpp
src/Main/: CMakeLists.txt  main.cpp
src/Panel/: CMakeLists.txt  InfoPanel.cpp  LegendPanel.cpp
src/Perspective/: CMakeLists.txt  CirclePerspective.cpp  ForceDirectedPerspective.cpp  FrontPerspective.cpp  SidePerspective.cpp  TopPerspective.cpp
src/Test/: CMakeLists.txt  main.cpp
src/Utils/: CMakeLists.txt  ConnectorStringToEnum.cpp  JointStringToEnum.cpp
src/View/: Bounder.cpp  CMakeLists.txt  CirclePerspective.cpp  ConnectorPainterPathCreator.cpp  ElementRightClickMenu.cpp  ElementsManager.cpp  ForceDirectedPerspective.cpp  FrontPerspective.cpp  FrontPerspectiveElementsCreator.cpp  GraphicConnector.cpp  GraphicElement.cpp  GraphicJoint.cpp  GraphicLink.cpp  GraphicMechanism.cpp  GraphicMotionBody.cpp  IPerspectiveElementsCreator.cpp  InfoPanel.cpp  JointPainterPathCreator.cpp  Legend.cpp  OverlappingLinkFinder.cpp  SceneFromXML.cpp  SceneToXML.cpp  SearchManager.cpp  SearchWindow.cpp  SidePerspective.cpp  SidePerspectiveElementsCreator.cpp  TopPerspective.cpp  TopPerspectiveElementsCreator.cpp  TopologyMapScene.cpp  TopologyMapWindow.cpp  Turtle.cpp  Zoom.cpp
ui/: CompareWindow.ui  ConnectorInfo.ui  JointInfo.ui  MotionBodyInfo.ui  SearchWindow.ui  TopologyMapWindow.ui
(+75 files in other folders)
