add_subdirectory(Utils)
add_subdirectory(Main)
add_subdirectory(Test)

#refactor

add_subdirectory(DataModel)
add_subdirectory(Graph)
add_subdirectory(DataHandler)

add_subdirectory(GraphicModel)
add_subdirectory(GraphicView)
add_subdirectory(Perspective)
add_subdirectory(Panel)

add_subdirectory(App)

